--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 src/chart.cpp
 src/ocpn_plugin.h
-src/xtr1_pi.cpp
-src/xtr1_pi.h
-src/xtrShop.cpp
+src/ofc_pi.cpp
+src/ofc_pi.h
+src/ofcShop.cpp
+src/chart.cpp
