Correct OSX Packaging script

--- a/buildosx/InstallOSX/ofc_pi.pkgproj.in
+++ b/buildosx/InstallOSX/ofc_pi.pkgproj.in
@@ -278,6 +278,119 @@
 															<dict>
 																<key>CHILDREN</key>
 																<array>
+																	<dict>
+																		<key>CHILDREN</key>
+																		<array>
+																			<dict>
+																				<key>CHILDREN</key>
+																				<array/>
+																				<key>GID</key>
+																				<integer>80</integer>
+																				<key>PATH</key>
+																				<string>/Users/dsr/Projects/ofc_pi/build/TD-CHS-RM-ATL05.jpg</string>
+																				<key>PATH_TYPE</key>
+																				<integer>0</integer>
+																				<key>PERMISSIONS</key>
+																				<integer>420</integer>
+																				<key>TYPE</key>
+																				<integer>3</integer>
+																				<key>UID</key>
+																				<integer>0</integer>
+																			</dict>
+																			<dict>
+																				<key>CHILDREN</key>
+																				<array/>
+																				<key>GID</key>
+																				<integer>80</integer>
+																				<key>PATH</key>
+																				<string>/Users/dsr/Projects/ofc_pi/build/TD-DK-S12.jpg</string>
+																				<key>PATH_TYPE</key>
+																				<integer>0</integer>
+																				<key>PERMISSIONS</key>
+																				<integer>420</integer>
+																				<key>TYPE</key>
+																				<integer>3</integer>
+																				<key>UID</key>
+																				<integer>0</integer>
+																			</dict>
+																			<dict>
+																				<key>CHILDREN</key>
+																				<array/>
+																				<key>GID</key>
+																				<integer>80</integer>
+																				<key>PATH</key>
+																				<string>/Users/dsr/Projects/ofc_pi/build/TD-DK-S21.jpg</string>
+																				<key>PATH_TYPE</key>
+																				<integer>0</integer>
+																				<key>PERMISSIONS</key>
+																				<integer>420</integer>
+																				<key>TYPE</key>
+																				<integer>3</integer>
+																				<key>UID</key>
+																				<integer>0</integer>
+																			</dict>
+																			<dict>
+																				<key>CHILDREN</key>
+																				<array/>
+																				<key>GID</key>
+																				<integer>80</integer>
+																				<key>PATH</key>
+																				<string>/Users/dsr/Projects/ofc_pi/build/TD-EXC-BAH.jpg</string>
+																				<key>PATH_TYPE</key>
+																				<integer>0</integer>
+																				<key>PERMISSIONS</key>
+																				<integer>420</integer>
+																				<key>TYPE</key>
+																				<integer>3</integer>
+																				<key>UID</key>
+																				<integer>0</integer>
+																			</dict>
+																			<dict>
+																				<key>CHILDREN</key>
+																				<array/>
+																				<key>GID</key>
+																				<integer>80</integer>
+																				<key>PATH</key>
+																				<string>/Users/dsr/Projects/ofc_pi/build/TD-NV-KK-2015.jpg</string>
+																				<key>PATH_TYPE</key>
+																				<integer>0</integer>
+																				<key>PERMISSIONS</key>
+																				<integer>420</integer>
+																				<key>TYPE</key>
+																				<integer>3</integer>
+																				<key>UID</key>
+																				<integer>0</integer>
+																			</dict>
+																			<dict>
+																				<key>CHILDREN</key>
+																				<array/>
+																				<key>GID</key>
+																				<integer>80</integer>
+																				<key>PATH</key>
+																				<string>/Users/dsr/Projects/ofc_pi/build/TD-ST-HG.jpg</string>
+																				<key>PATH_TYPE</key>
+																				<integer>0</integer>
+																				<key>PERMISSIONS</key>
+																				<integer>420</integer>
+																				<key>TYPE</key>
+																				<integer>3</integer>
+																				<key>UID</key>
+																				<integer>0</integer>
+																			</dict>
+																		</array>
+																		<key>GID</key>
+																		<integer>80</integer>
+																		<key>PATH</key>
+																		<string>data</string>
+																		<key>PATH_TYPE</key>
+																		<integer>0</integer>
+																		<key>PERMISSIONS</key>
+																		<integer>509</integer>
+																		<key>TYPE</key>
+																		<integer>2</integer>
+																		<key>UID</key>
+																		<integer>0</integer>
+																	</dict>
 																</array>
 																<key>GID</key>
 																<integer>80</integer>
@@ -1007,11 +1120,10 @@
 					<true/>
 				</dict>
 			</array>
-                        <key>NAME</key>
+			<key>NAME</key>
                         <string>${VERBOSE_NAME}-Plugin_${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}</string>
-                        <key>REFERENCE_FOLDER_PATH</key>
-                        <string>.</string>
-
+			<key>REFERENCE_FOLDER_PATH</key>
+			<string>.</string>
 		</dict>
 	</dict>
 	<key>TYPE</key>
