Update ocpn_plugin.h, and related built rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,8 @@ ENDIF(DEFINED _wx_selected_config)
 
 INCLUDE("cmake/PluginConfigure.cmake")
 
+ADD_DEFINITIONS(-DMAKING_PLUGIN)
+
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/wxJSON)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
